fix: image overflowing issue

--- a/projects/business-card/style.css
+++ b/projects/business-card/style.css
@@ -3,16 +3,34 @@ body {
     font-family: Arial, sans-serif;
 }
 .business-card {
-    width: 300px;
+    background-color: antiquewhite;
+    width: 100%;
+    max-width: 300px;
+    height: auto;
     padding: 20px;
+    margin: auto;
     margin-top: 100px;
     text-align: center;
     font-size: 16px;
-    margin-left: auto;
-    border: 2px solid green;
+    border: 2px solid hsl(120, 100%, 10%);
 }
 .profile-image {
     max-width: 100%;
+    height: 175px;
+    object-fit: cover;
+    border: 2px solid grey;
+}
+.full-name {
+    font-size: 1.8rem;
+    color: hsl(120, 100%, 20%);
+}
+.designation {
+    font-size: 1.5rem;
+    color: grey;
+}
+.company {
+    font-size: 1.3rem;
+    color: silver;
 }
 p {
     margin: 5px;
@@ -22,4 +40,10 @@ a {
 }
 .social-media a {
     color: brown;
+}
+
+hr {
+    height: 1.2px;
+    background-color: gray;
+    margin: 20px auto;
 }
